<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertDialogLevelOneActivity">

    <TextView
        android:id="@+id/activityOneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/first_activity_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/defaultAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_default_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityOneTitle"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/singleChoiceAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_single_choice_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/defaultAlertDialog"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/singleConfirmChoiceAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_single_choice_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singleChoiceAlertDialog"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/multipleChoiceAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_multiple_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singleConfirmChoiceAlertDialog"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/multipleChoiceConfirmAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_multiple_choice_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multipleChoiceAlertDialog"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/textViewCurrentVolume"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/multipleChoiceConfirmAlertDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Current Volume: 100%"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/ColorView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCurrentColor"
        app:layout_constraintTop_toBottomOf="@id/textViewCurrentVolume" />

    <TextView
        android:id="@+id/textViewCurrentColor"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:gravity="center"
        android:text="@string/current_color_text_view"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCurrentVolume" />

    <Button
        android:id="@+id/switchToSecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_to_second_activity_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCurrentVolume"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="170dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>